--- a/3st/3st.vcxproj.filters
+++ b/3st/3st.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="3st.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="6st.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
