10주차 강의 201934011김성웅

--- a/3st/3st.vcxproj
+++ b/3st/3st.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10st.cpp" />
     <ClCompile Include="3st.cpp" />
     <ClCompile Include="6st.cpp" />
   </ItemGroup>
